cs360/.svn/pristine/7c/7c6575a91813ed99f2e4d21819ecccb810ab7eba.svn-base
cc1: warning: /dev/null: not a directory [enabled by default]
tf4.c:7:1: error: expected identifier or ‘(’ before numeric constant
 1 + 1 = 1;
 ^
Command failed.  Exiting
